working on basket

--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connect_to_database": "Server=localhost;Port=5433;Database=basketdb;User Id=postgres;Password=admin;Include Error Detail=true"
+  }
 }
