--- a/Services/Basket/Basket.API/Basket.API.csproj
+++ b/Services/Basket/Basket.API/Basket.API.csproj
@@ -8,13 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.1.0" />
+    <PackageReference Include="Marten" Version="7.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Basket/CheckoutBasket/" />
-    <Folder Include="Basket/DeleteBasket/" />
   </ItemGroup>
 
   <ItemGroup>
