--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,6 +12,19 @@ services:
       - "5432:5432"
     volumes:
       - postgres_catalog:/var/lib/postgres/data/
+
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=basketdb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_catalog:/var/lib/postgres/data/
+      
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
