Setting up redis

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -24,6 +24,12 @@ services:
       - "5433:5432"
     volumes:
       - postgres_catalog:/var/lib/postgres/data/
+
+  distributedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+      - "6379:6379"
       
   catalog.api:
     environment:
