--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connect_to_database": "Server=localhost;Port=5433;Database=basketdb;User Id=postgres;Password=admin;Include Error Detail=true",
+    "database": "Server=localhost;Port=5431;Database=basketdb;User Id=postgres;Password=admin;Include Error Detail=true",
     "Redis": "localhost:6379"
   }
 }
