--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,9 +21,9 @@ services:
       - POSTGRES_DB=basketdb
     restart: always
     ports:
-      - "5433:5432"
+      - "5431:5432"
     volumes:
-      - postgres_catalog:/var/lib/postgres/data/
+      - postgres_basket:/var/lib/postgres/data/
 
   distributedcache:
     container_name: distributedcache
@@ -42,6 +42,23 @@ services:
     ports:
       - "6000:8080"
       - "6060:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__database=Server=basketdb;Port=5432;Database=basketdb;User Id=postgres;Password=admin;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+    depends_on:
+      - distributedcache
+      - basketdb
+    ports:
+      - "6001:8080"
+      - "6061:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
