--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "database": "Server=localhost;Port=5431;Database=basketdb;User Id=postgres;Password=admin;Include Error Detail=true",
     "Redis": "localhost:6379"
+  },
+  "GrpcSettings": {
+    "DiscountUrl": "https://localhost:5052"
   }
 }
