--- a/Services/Discount/Discount.Grpc/appsettings.json
+++ b/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "database": "Data Source=discountdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
