infra + app layers with ddd

--- a/Services/Ordering/API/appsettings.json
+++ b/Services/Ordering/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "database": "Server=localhost;Database=OrderDb;User Id=sa;Password=Admin12345;Encrypt=False;TrustServerCertificate=True"
+  }
 }
