--- a/Services/Ordering/API/appsettings.json
+++ b/Services/Ordering/API/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "database": "Server=localhost;Database=OrderDb;User Id=sa;Password=Admin12345;Encrypt=False;TrustServerCertificate=True"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment": true
   }
 }
