--- a/launchSettings.json
+++ b/launchSettings.json
@@ -7,7 +7,8 @@
         "catalog.api": "StartDebugging",
         "basket.api": "StartDebugging",
         "discount.grpc": "StartDebugging",
-        "api": "StartDebugging"
+        "api": "StartDebugging",
+        "yarpapigateways": "StartDebugging"
       }
     }
   }
